# kernel-dsl-bench

./: .gitignore  README.md  common.py  plan.md  pyproject.toml  run.py
RMSNorm/: __init__.py  benchmark.py
fma/: __init__.py  benchmark.py  fma_jax.py  fma_torch.py  fma_triton.py
matmul/: __init__.py  benchmark.py  matmul_jax.py  matmul_torch.py  matmul_triton.py
rmsnorm/: rmsnorm_torch.py  rmsnorm_triton.py
