[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-benchmark"
version = "0.1.0"
description = "Minimal Triton vs PyTorch GPU kernel benchmarking"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = []
py-modules = ["common", "bench_fma", "bench_matmul"]
